@@ -1,1 +1,1 @@
-DIST gnome-mpv-0.6.tar.gz 58270 SHA256 e1544c5b2055cc0a92af625b87f53422e05dbe39043c5d5b3d6db1a75e3435c0 SHA512 af3254a4f8ef045d6a70fc836659e2ac3edf1c7c65c0402adaa7ebaa6a5052e73738964b31a51fc5cfd994383661b80ae23e1195abbc79ac67189639a55b9fac WHIRLPOOL 5b7e5a2ceba6f105ad021383d6d61c0896e4ed1edcf0d2b102eb5f907283538cdfb5c0cf152e2a091bed72f51ddfa48b285bb8190fd7a3b40c120fc54f83ce97
+DIST gnome-mpv-0.7.tar.gz 70379 SHA256 94b9d9ff0afe4375d0fe6f53df6069de193d009488988014b0e30e23edad49a5 SHA512 a598ab7d082c7039e3ec7a592bcb8cbd7485adbc161056365824b649c3bda38c797492b9e9bbbc14dc922e29f05f126ff75f5deffea91cbc24dada215cd19e07 WHIRLPOOL 161ce1283d05c058ea51b17e785871565e94705cf27f1bdca5e3cea58950789397e7c852a27a0eb36e7381c9567c0231fb8cc8e6156bb8ea4fa17ca19a534517
